added container to main for init

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,11 @@
 <app-header> </app-header>
-<div>
-  <app-shopping-main> </app-shopping-main>
-  <app-recipe-main> </app-recipe-main>
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <app-shopping-main> </app-shopping-main>
+      <app-recipe-main> </app-recipe-main>
+    </div>
+  </div>
 </div>
 
 
