--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,21 @@
-<p>header works YAY!</p>
+<mat-toolbar>
+  <mat-toolbar-row>
+    <span class="brand-name"><a href="#">Shopping & Recipe Book</a></span>
+    <div class="add-container">
+      <span class="add-items"><a href="#">Recipes</a></span>
+      <span class="add-items" style="margin-left: 2rem;"><a href="#">Shopping List</a></span>
+    </div>
+    <span class="example-spacer"></span>
+    <button mat-icon-button class="button-icon">
+      <ul class="nav navbar-nav navbar-right">
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" role="button">Manage <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Save Data</a></li>
+            <li><a href="#">Fetch Data</a></li>
+          </ul>
+        </li>
+      </ul>
+    </button>
+  </mat-toolbar-row>
+</mat-toolbar>
