--- a/src/app/recipe-main/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipe-main/recipe-detail/recipe-detail.component.html
@@ -1,1 +1,48 @@
-<p>recipe-detail works!</p>
+
+<div class="row">
+  <div class="col-xs-12">
+    <img src="" alt="">
+  </div>
+</div>
+
+<div class="row" style="margin-top: 1rem;">
+  <div class="col-xs-12">
+    <h1>Recipe Name</h1>
+  </div>
+</div>
+
+<div style="margin-top: 1rem;" class="row">
+  <div class="col-xs-12">
+    <mat-accordion>
+      <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false">
+        <mat-expansion-panel-header>
+          <mat-panel-title>
+           Manage Recipe
+          </mat-panel-title>
+        </mat-expansion-panel-header>
+        <ul class="dropdown-list">
+          <li>
+            <a href="#">Add to Shopping List</a>
+          </li>
+          <li>
+            <a href="#" (click)="onEditRecipe()">Edit Recipe</a>
+          </li>
+          <li>
+            <a href="#" (click)="onDeleteRecipe()">Delete Recipe</a>
+          </li>
+        </ul>
+      </mat-expansion-panel>
+    </mat-accordion>
+  </div>
+</div>
+<div class="row">
+  <div class="col-xs-12">
+    Description
+  </div>
+</div>
+<div class="row">
+  <div class="col-xs-12">
+    Ingredients
+  </div>
+</div>
+
