add ingredient form added

--- a/src/app/shopping-main/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-main/shopping-edit/shopping-edit.component.html
@@ -1,1 +1,23 @@
-<p>shopping-edit works!</p>
+<div class="row">
+  <div class="col-md-12">
+    <form>
+      <div class="row">
+        <div class="col-sm-5 form-group">
+          <label for="name">Name</label>
+          <input type="text" class="form-control" id="name">
+        </div>
+        <div class="col-sm-2 form-group">
+          <label for="amount">Amount</label>
+          <input type="number" class="form-control" id="amount">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12">
+          <button mat-raised-button style="background-color: #28a745; color: white; margin-left: 1rem" type="submit">Add</button>
+          <button mat-raised-button color="warn" type="button">Delete</button>
+          <button mat-raised-button color="primary" type="button">Clear</button>
+        </div>
+      </div>
+    </form>
+  </div>
+</div>
