--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,10 +6,10 @@
       <span class="add-items" style="margin-left: 2rem;"><a href="#">Shopping List</a></span>
     </div>
     <span class="example-spacer"></span>
-    <button mat-icon-button class="button-icon">
+    <button mat-icon-button class="button-icon" style="margin-right: 20px;">
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" role="button">Manage <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" role="button">Manage<span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="#">Save Data</a></li>
             <li><a href="#">Fetch Data</a></li>
