--- a/src/app/shopping-main/shopping-main.component.html
+++ b/src/app/shopping-main/shopping-main.component.html
@@ -2,8 +2,8 @@
   <div class="col-md-10">
     <app-shopping-edit></app-shopping-edit>
     <hr>
-    <mat-selection-list #items>
-      <mat-list-option *ngFor="let item of ingredients">
+    <mat-selection-list>
+      <mat-list-option *ngFor="let item of ingredients" #ingredientItems>
         {{item.amount}}
         {{item.name}}
       </mat-list-option>
