--- a/src/app/recipe-main/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipe-main/recipe-detail/recipe-detail.component.html
@@ -1,13 +1,13 @@
 
 <div class="row">
   <div class="col-xs-12">
-    <img src="" alt="">
+    <img [src]="recipe.imagePath" [alt]="recipe.name" style="max-height: 400px; margin-top: 2rem;">
   </div>
 </div>
 
 <div class="row" style="margin-top: 1rem;">
   <div class="col-xs-12">
-    <h1>Recipe Name</h1>
+    <h1>{{recipe.name}}</h1>
   </div>
 </div>
 
@@ -37,7 +37,7 @@
 </div>
 <div class="row">
   <div class="col-xs-12">
-    Description
+    {{recipe.description}}
   </div>
 </div>
 <div class="row">
