--- a/src/app/recipe-main/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipe-main/recipe-list/recipe-item/recipe-item.component.html
@@ -1,1 +1,10 @@
-<p>recipe-item works!</p>
+<a href="#"
+(click)="onSelected()">
+  <mat-card class="recipe-card">
+    <mat-card-title-group>
+      <mat-card-title>{{recipe.name}}</mat-card-title>
+      <mat-card-subtitle>{{recipe.description}}</mat-card-subtitle>
+      <img [src]=recipe.imagePath [alt]=recipe.name class="images">
+    </mat-card-title-group>
+  </mat-card>
+</a>
