--- a/src/app/shopping-main/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-main/shopping-edit/shopping-edit.component.html
@@ -1,19 +1,20 @@
 <div class="row">
-  <div class="col-md-12">
+  <div class="col-sm-12">
     <form>
       <div class="row">
-        <div class="col-sm-5 form-group">
+        <div class="col-sm-6 form-group">
           <label for="name">Name</label>
-          <input type="text" class="form-control" id="name">
+          <input type="text" class="form-control" id="name" #nameInput>
         </div>
-        <div class="col-sm-2 form-group">
+        <div class="col-sm-6 form-group">
           <label for="amount">Amount</label>
-          <input type="number" class="form-control" id="amount">
+          <input type="number" class="form-control" id="amount" #amountInput>
         </div>
       </div>
       <div class="row">
         <div class="col-xs-12">
-          <button mat-raised-button style="background-color: #28a745; color: white; margin-left: 1rem" type="submit">Add</button>
+          <button mat-raised-button style="background-color: #28a745; color: white; margin-left: 1rem" type="button" 
+          (click)="onAddItem()">Add</button>
           <button mat-raised-button color="warn" type="button">Delete</button>
           <button mat-raised-button color="primary" type="button">Clear</button>
         </div>
