--- a/src/app/shopping-main/shopping-main.component.html
+++ b/src/app/shopping-main/shopping-main.component.html
@@ -1,6 +1,6 @@
 <div class="row">
-  <div class="col-md-10">
-    <app-shopping-edit></app-shopping-edit>
+  <div class="col-md-12">
+    <app-shopping-edit (ingredientAdded)="onIngredientAdded($event)"></app-shopping-edit>
     <hr>
     <mat-selection-list>
       <mat-list-option *ngFor="let item of ingredients" #ingredientItems>
