--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,19 +3,14 @@
     <span class="brand-name"><a href="#">Shopping & Recipe Book</a></span>
     <div class="add-container">
       <span class="add-items"><a href="#" (click)="onSelect('recipe')">Recipes</a></span>
-      <span class="add-items" style="margin-left: 2rem;"><a href="#" (click)="onSelect('shopping-list')">Shopping List</a></span>
+      <span class="add-items" style="margin-left: 2rem;"><a href="#" (click)="onSelect('shopping-list')">Shopping
+          List</a></span>
     </div>
     <span class="example-spacer"></span>
-    <button mat-icon-button class="button-icon" style="margin-right: 20px;">
-      <ul class="nav navbar-nav navbar-right">
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" role="button">Manage<span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Save Data</a></li>
-            <li><a href="#">Fetch Data</a></li>
-          </ul>
-        </li>
-      </ul>
-    </button>
+    <button mat-button [matMenuTriggerFor]="menu">Manage<span class="caret"></span></button>
+    <mat-menu #menu="matMenu" [class]="'panel'">
+      <button mat-menu-item>Save Data</button>
+      <button mat-menu-item>Fetch Data</button>
+    </mat-menu>
   </mat-toolbar-row>
 </mat-toolbar>
