--- a/src/app/recipe-main/recipe-list/recipe-list.component.html
+++ b/src/app/recipe-main/recipe-list/recipe-list.component.html
@@ -6,8 +6,6 @@
 <hr style="margin-top: 1rem; margin-bottom: 1rem;">
 <div class="row" style="width: 100%">
   <div class="col-xs-12" style="width: 100%">
-    <app-recipe-item *ngFor="let recipeEl of recipes"
-    [recipe]="recipeEl"
-    (recipeSelected)="onRecipeSelected(recipeEl)"></app-recipe-item>
+    <app-recipe-item *ngFor="let recipeEl of recipes" [recipe]="recipeEl"></app-recipe-item>
   </div>
 </div>
