--- a/src/app/recipe-main/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipe-main/recipe-detail/recipe-detail.component.html
@@ -22,7 +22,7 @@
         </mat-expansion-panel-header>
         <ul class="dropdown-list">
           <li>
-            <a href="#">Add to Shopping List</a>
+            <a (click)="onAddToShoppingList()" style="cursor: pointer;">Add to Shopping List</a>
           </li>
           <li>
             <a href="#" (click)="onEditRecipe()">Edit Recipe</a>
@@ -42,7 +42,12 @@
 </div>
 <div class="row">
   <div class="col-xs-12">
-    Ingredients
+   <ul class="list-group">
+     <li class="list-group-item" *ngFor="let ingredient of recipe.ingredients">
+        <span class="badge">{{ingredient.amount}}</span> - 
+        {{ingredient.name}}
+     </li>
+   </ul>
   </div>
 </div>
 
