--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,12 @@
-<app-header (featureSelected)="onNavigate($event)"> </app-header>
+<app-header> </app-header>
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <app-recipe-main  *ngIf="this.navigatedLocation === 'recipe'"> </app-recipe-main>
-      <app-shopping-main *ngIf="this.navigatedLocation !== 'recipe'"> </app-shopping-main>
+      <!-- <app-recipe-main  *ngIf="this.navigatedLocation === 'recipe'"> </app-recipe-main>
+      <app-shopping-main *ngIf="this.navigatedLocation !== 'recipe'"> </app-shopping-main> -->
+      <router-outlet></router-outlet>
     </div>
   </div>
 </div>
 
 
-
-<router-outlet></router-outlet>
