--- a/src/app/recipe-main/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipe-main/recipe-detail/recipe-detail.component.html
@@ -25,10 +25,10 @@
             <a (click)="onAddToShoppingList()" style="cursor: pointer;">Add to Shopping List</a>
           </li>
           <li>
-            <a href="#" (click)="onEditRecipe()">Edit Recipe</a>
+            <a style="cursor: pointer;" (click)="onEditRecipe()">Edit Recipe</a>
           </li>
           <li>
-            <a href="#" (click)="onDeleteRecipe()">Delete Recipe</a>
+            <a style="cursor: pointer;" (click)="onDeleteRecipe()">Delete Recipe</a>
           </li>
         </ul>
       </mat-expansion-panel>
