--- a/src/app/recipe-main/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipe-main/recipe-list/recipe-item/recipe-item.component.html
@@ -1,6 +1,6 @@
 <a style="cursor: pointer;"
 [routerLink]="[index]">
-  <mat-card class="recipe-card"
+  <mat-card class="button glow-button"
   routerLinkActive="active">
     <mat-card-title-group>
       <mat-card-title>{{recipe.name}}</mat-card-title>
