--- a/src/app/recipe-main/recipe-list/recipe-list.component.html
+++ b/src/app/recipe-main/recipe-list/recipe-list.component.html
@@ -1,6 +1,6 @@
 <div style="margin-top: 1rem; margin-bottom: 1rem;">
   <div class="col-xs-12">
-    <button class="btn btn-success" (click)="onNewRecipe()">New Recipe</button>
+    <button class="button glow-button" (click)="onNewRecipe()">New Recipe</button>
   </div>
 </div>
 <hr style="margin-top: 1rem; margin-bottom: 1rem;">
