--- a/src/app/shopping-main/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-main/shopping-edit/shopping-edit.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-sm-12">
-    <form>
+    <form class="form">
       <div class="row">
         <div class="col-sm-4 form-group">
           <label for="name">Name</label>
@@ -13,10 +13,10 @@
       </div>
       <div class="row">
         <div class="col-xs-8">
-          <button mat-raised-button style="background-color: #28a745; color: white; margin-left: 1rem" type="button" 
+          <button mat-raised-button class="button glow-button" type="button" 
           (click)="onAddItem()">Add</button>
-          <button mat-raised-button color="warn" type="button">Delete</button>
-          <button mat-raised-button color="primary" type="button">Clear</button>
+          <button mat-raised-button class="Dbutton glow-Dbutton"  type="button">Delete</button>
+          <button mat-raised-button class="Cbutton glow-Cbutton" type="button">Clear</button>
         </div>
       </div>
     </form>
