--- a/src/app/shopping-main/shopping-edit/shopping-edit.component.scss
+++ b/src/app/shopping-main/shopping-edit/shopping-edit.component.scss
@@ -2,3 +2,54 @@ button{
   margin-right: 10px;
   margin-bottom: 2rem;
 }
+
+.form{
+  margin-top: 2rem;
+}
+
+.button {
+  text-decoration: none;
+  color: white;
+  margin-left: 1rem;
+  background: #00C0A3;
+  border-radius: 4px;
+  font-weight: bold;
+  text-transform: uppercase;
+  transition: all 0.2s ease-in-out;
+}
+
+.glow-button:hover {
+  color: white;
+  box-shadow: 0 5px 15px #845EC2;
+}
+
+
+.Dbutton {
+  text-decoration: none;
+  color: white;
+  background: #cc5ca7;
+  border-radius: 4px;
+  font-weight: bold;
+  text-transform: uppercase;
+  transition: all 0.2s ease-in-out;
+}
+
+.glow-Dbutton:hover {
+  color: white;
+  box-shadow: 0 5px 15px #845EC2;
+}
+
+.Cbutton {
+  text-decoration: none;
+  color: white;
+  background: #00896F;
+  border-radius: 4px;
+  font-weight: bold;
+  text-transform: uppercase;
+  transition: all 0.2s ease-in-out;
+}
+
+.glow-Cbutton:hover {
+  color: white;
+  box-shadow: 0 5px 15px #845EC2;
+}
