--- a/src/app/shopping-main/shopping-main.component.html
+++ b/src/app/shopping-main/shopping-main.component.html
@@ -2,10 +2,11 @@
   <div class="col-md-12">
     <app-shopping-edit></app-shopping-edit>
     <hr>
-    <mat-selection-list>
+    <mat-selection-list class="list">
       <mat-list-option *ngFor="let item of ingredients" #ingredientItems>
         {{item.amount}}
         {{item.name}}
+        <hr>
       </mat-list-option>
     </mat-selection-list>
   </div>
