--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,5 +2,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-html, body { height: 100%; }
+html, body {
+  height: 100%; 
+  background-image: url('./assets/4873152.jpg');
+  background-size: cover;
+}
+
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
