--- a/src/app/shopping-main/shopping-main.component.html
+++ b/src/app/shopping-main/shopping-main.component.html
@@ -3,7 +3,8 @@
     <app-shopping-edit></app-shopping-edit>
     <hr>
     <mat-selection-list class="list">
-      <mat-list-option *ngFor="let item of ingredients" #ingredientItems>
+      <mat-list-option *ngFor="let item of ingredients; let i = index" #ingredientItems
+      (click)="onEdit(i)">
         {{item.amount}}
         {{item.name}}
         <hr>
