styled edit/new form

--- a/src/app/recipe-main/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipe-main/recipe-edit/recipe-edit.component.html
@@ -1,11 +1,11 @@
 <div class="row">
-  <div class="col-md-12">
+  <div class="col-md-12" id="container">
     <h1>Edit Recipe</h1>
     <form [formGroup]="recipeForm" (ngSubmit)="onSubmit()">
-      <div >
-        <div class="col-xs-12">
-          <button type="submit" class="button" [disabled]="!recipeForm.valid">Save</button>
-          <button type="button" class="Dbutton" (click)="onCancel()">Cancel</button>
+      <div>
+        <div class="button-group">
+          <button type="submit" class="button glow-button" [disabled]="!recipeForm.valid">Save</button>
+          <button type="button" class="Dbutton glow-Dbutton" (click)="onCancel()">Cancel</button>
         </div>
       </div>
       <div >
@@ -25,8 +25,8 @@
           </div>
         </div>
       </div>
-      <div class="row">
-        <div class="col-xs-12">
+      <div class="image-preview">
+        <div>
           <img [src]="imagePath.value" alt="" class="img-responsive">
         </div>
       </div>
@@ -38,26 +38,26 @@
         </div>
       </div>
       <!-- ingredients seciton here -->
-      <div class="row">
+      <div class="ing-container">
         <div class="col-xs-12" formArrayName="ingredients">
           <div class="row" *ngFor="let ingredientCtrl of controls; let i = index" [formGroupName]="i">
 
             <div class="col-xs-8" style="margin-left: 1rem">
-              <input class="form-group" type="text" id="field" placeholder="Ingredient" formControlName="name">
+              <input class="form-control" type="text" id="field" placeholder="Ingredient" formControlName="name">
             </div>
 
             <div class="col-xs-2" style="margin-left: 1rem">
-              <input class="form-group" type="number" id="field" placeholder="Amount" formControlName="amount">
+              <input class="form-control" type="number" id="field" placeholder="Amount" formControlName="amount">
             </div>
 
             <div class="col-xs-2">
-              <button type="button" class="Dbutton" (click)="deleteIngredient(i)">X</button>
+              <button type="button" class="Dbutton glow-Dbutton" (click)="deleteIngredient(i)">X</button>
             </div>
           </div>
           <hr>
-          <div class="row">
+          <div class="add-button">
             <div class="col-xs-12">
-              <button type="button" class="button" (click)="addIngredient()">Add Ingredient</button>
+              <button type="button" class="Cbutton glow-Cbutton" (click)="addIngredient()">Add Ingredient</button>
             </div>
           </div>
         </div>
