--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,8 +9,8 @@
     <span class="example-spacer"></span>
     <button mat-button [matMenuTriggerFor]="menu">Manage<span class="caret"></span></button>
     <mat-menu #menu="matMenu" [class]="'panel'">
-      <button mat-menu-item>Save Data</button>
-      <button mat-menu-item>Fetch Data</button>
+      <button mat-menu-item (click)="saveData()">Save Data</button>
+      <button mat-menu-item (click)="fetchData()">Fetch Data</button>
     </mat-menu>
   </mat-toolbar-row>
 </mat-toolbar>
