--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,6 +5,7 @@
       <span routerLinkActive="active" id="add-items"><a routerLink="/recipes">Recipes</a></span>
       <span routerLinkActive="active" id="add-items" style="margin-left: 2rem;"><a routerLink="/shopping">Shopping
           List</a></span>
+      <span routerLinkActive="active" id="add-items" style="margin-left: 2rem;"><a routerLink="/login">Login</a></span>
     </div>
     <span class="example-spacer"></span>
     <button mat-button [matMenuTriggerFor]="menu">Manage<span class="caret"></span></button>
