--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,13 +2,16 @@
   <mat-toolbar-row>
     <span class="brand-name"><a href="#">Shopping & Recipe Book</a></span>
     <div class="add-container">
-      <span routerLinkActive="active" id="add-items"><a routerLink="/recipes">Recipes</a></span>
+      <span routerLinkActive="active" id="add-items" *ngIf="isAuthenticated"><a routerLink="/recipes">Recipes</a></span>
       <span routerLinkActive="active" id="add-items" style="margin-left: 2rem;"><a routerLink="/shopping">Shopping
           List</a></span>
-      <span routerLinkActive="active" id="add-items" style="margin-left: 2rem;"><a routerLink="/login">Login</a></span>
+      <span routerLinkActive="active" id="add-items" style="margin-left: 2rem;" *ngIf="!isAuthenticated"><a routerLink="/login">Login</a></span>
     </div>
     <span class="example-spacer"></span>
-    <button mat-button [matMenuTriggerFor]="menu">Manage<span class="caret"></span></button>
+    <span>
+      <a id="add-items" *ngIf="isAuthenticated">Logout</a>
+    </span>
+    <button mat-button [matMenuTriggerFor]="menu" *ngIf="isAuthenticated">Manage<span class="caret"></span></button>
     <mat-menu #menu="matMenu" [class]="'panel'">
       <button mat-menu-item (click)="saveData()">Save Data</button>
       <button mat-menu-item (click)="fetchData()">Fetch Data</button>
