all crud is functional/small delete bug

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -11,10 +11,10 @@
     <span>
       <a id="add-items" *ngIf="isAuthenticated">Logout</a>
     </span>
-    <!-- <button mat-button [matMenuTriggerFor]="menu" *ngIf="isAuthenticated">Manage<span class="caret"></span></button>
+    <button mat-button [matMenuTriggerFor]="menu" *ngIf="isAuthenticated">Manage<span class="caret"></span></button>
     <mat-menu #menu="matMenu" [class]="'panel'">
       <button mat-menu-item (click)="saveData()">Save Data</button>
       <button mat-menu-item (click)="fetchData()">Fetch Data</button>
-    </mat-menu> -->
+    </mat-menu>
   </mat-toolbar-row>
 </mat-toolbar>
