added local storage and route guards

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar>
   <mat-toolbar-row>
-    <span class="brand-name"><a href="#">Shopping & Recipe Book</a></span>
+    <span class="brand-name">Shopping & Recipe Book</span>
     <div class="add-container">
       <span routerLinkActive="active" id="add-items" *ngIf="isAuthenticated"><a routerLink="/recipes">Recipes</a></span>
       <span routerLinkActive="active" id="add-items" style="margin-left: 2rem;"><a routerLink="/shopping">Shopping
