--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar>
+<mat-toolbar class="col-xs-12">
   <mat-toolbar-row>
     <span class="brand-name">Shopping & Recipe Book</span>
     <div class="add-container">
