--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,6 +1,22 @@
+//mobile screen size 
+@media screen and (max-width: 900px) {
+  mat-toolbar{
+    background-color: #4B4453;
+    color: white;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    max-width: 100vw;
+    justify-content: space-between;
+    padding-top: 8px;
+  }
+}
+
+
 .example-spacer {
   flex: 1 1 auto;
 }
+
 mat-toolbar{
   background-color: #4B4453;
   color: white;
