added alerts/QOL notifications

--- a/src/app/recipe-main/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipe-main/recipe-detail/recipe-detail.component.html
@@ -31,6 +31,9 @@
         </ul>
       </mat-expansion-panel>
     </mat-accordion>
+    <div class="alert-container">
+      <p *ngIf="addedToShoppingList" class="alert-message">Items Added!</p>
+    </div>
   </div>
 </div>
 <div class="row" id="description">
