--- a/src/app/recipe-main/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipe-main/recipe-edit/recipe-edit.component.html
@@ -13,6 +13,7 @@
           <div class="form-group">
             <label for="name">Recipe Name</label>
             <input type="text" class="form-control" id="name" placeholder="Recipe Name" formControlName="name">
+            <div class="img-alert" *ngIf="recipeForm.dirty">You need to name it</div>
           </div>
         </div>
       </div>
@@ -21,7 +22,8 @@
           <div class="form-group">
             <label for="imagePath">IMG URL</label>
             <input type="text" class="form-control" id="imagePath" placeholder="add image path"
-              formControlName="imagePath" #imagePath>
+              formControlName="imagePath" #imagePath required>
+              <div class="img-alert" *ngIf="recipeForm.dirty">You must put a URL</div>
           </div>
         </div>
       </div>
@@ -35,6 +37,7 @@
           <label for="description">Description</label>
           <textarea type="text" class="form-control" id="description" placeholder="description..."
             formControlName="description"></textarea>
+            <div class="img-alert" *ngIf="recipeForm.dirty">We need a description</div>
         </div>
       </div>
       <!-- ingredients seciton here -->
